Fix: Hide itens by ng-cloak, z-index in config file

--- a/public/assets/sass/config.sass
+++ b/public/assets/sass/config.sass
@@ -17,8 +17,10 @@ $secondary-font-family: dead_font_walkingregular, sans-serif
 $main-font-size: 50px
 
 // z-index manager
+$z-index-down-arrow: 3
 $z-index-blood-decoration-item: 5
 $z-index-character: 6
+$z-index-social: 6
 
 // btn
 $btn-primary-color: #98FFA2
