--- a/public/assets/sass/modules/character.sass
+++ b/public/assets/sass/modules/character.sass
@@ -29,7 +29,7 @@ $module-name: 'character'
 .#{$module-name}-info
   width: 640px
   margin: 50px 0 0 0
-  height: 315px
+  height: 300px
   &.is-full-size
     margin: 0 auto
     width: 640px
