--- a/public/assets/sass/modules/down-arrow.sass
+++ b/public/assets/sass/modules/down-arrow.sass
@@ -10,7 +10,7 @@ $module-name: 'down-arrow'
   position: absolute
   width: 100%
   bottom: -50px
-  z-index: 3
+  z-index: $z-index-down-arrow
   a
     cursor: pointer
 
