--- a/public/assets/sass/modules/social.sass
+++ b/public/assets/sass/modules/social.sass
@@ -6,6 +6,8 @@
 $module-name: 'social'
 
 .#{$module-name}
+  position: relative
+  z-index: $z-index-social
   margin: 28px 0 0 0
   svg
     width: $social-svg-ratio
